force-app/main/default/objects/Task_Detail__c/Task_Detail__c.object-meta.xml
<CustomObject>
    <label>Task Detail</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>