force-app/main/default/objects/Task_Detail__c/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <referenceTo>Task_Detail__c</referenceTo>
    <relationshipLabel>Task Details</relationshipLabel>
    <relationshipName>Child_Task_Details</relationshipName>
    <type>Lookup</type>
</CustomField>