force-app/main/default/objects/Task_Detail__c/fields/Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Task_Template__c</fullName>
    <label>Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Details</relationshipLabel>
    <relationshipName>Task_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>