force-app/main/default/objects/Task_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Task</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Document Collection</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>